gccida/g3/bitmap_clear
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_clear/src/bitmap.c:716:12: error: expected expression
*( _OWORD *)&head->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_clear/src/bitmap.c:716:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&head->first = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/bitmap_clear/src/obj/bitmap.o] Error 1
